Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109066

wasm: QDialog::exec() with asyncify hangs

    XMLWordPrintable

Details

    • WebAssembly
    • 8f04c50cf (dev), 6415730b9 (6.5), daba0b8c1 (dev), b8cc13178 (6.5)

    Description

      To reproduce, open addressbook example and add this to CMakeFiles.txt as mentioned in docs:

      target_link_options(<target> PUBLIC -sASYNCIFY -Os)
      

      Run the example and click Add button. The application and more or less the browser as well becomes frozen with 100% cpu use.

      Attachments

        For Gerrit Dashboard: QTBUG-109066
        # Subject Branch Project Status CR V

        Activity

          People

            mikolaj.boc Mikołaj Boc (Inactive)
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes