Fix event dispatching on WASM

1) Check only for the events that the dispatcher is able to process,
otherwise it enters an endless loop
2) Take care to run the correct wake up callback with
Asyncify.handleSleep

Fixes: QTBUG-109066
Change-Id: I10d29d18962c3e438e56712e1f43ecadedb6205c
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 8f04c50cffe5d6b3963a29715b2dd2d37269d5de)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>