src/corelib/kernel/qeventdispatcher_wasm_p.h
@@ -52,7 +52,8 @@ public:
 
     static void socketSelect(int timeout, int socket, bool waitForRead, bool waitForWrite,
                             bool *selectForRead, bool *selectForWrite, bool *socketDisconnect);
-                        protected:
+protected:
+    virtual bool hasWindowSystemEvents();
     virtual void processWindowSystemEvents(QEventLoop::ProcessEventsFlags flags);
 
 private:
